<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="back_button">Кнопка назад</string>
    <string name="link_to_the_practicum">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email">igorrozembaum@yandex.ru</string>
    <string name="link_to_the_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear_button_description">Отчисить поле ввода</string>
    <string name="track_cover">Обложка трека</string>
    <string name="problems_with_the_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="history_list_title">Вы искали</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="durationTrack">Длительность</string>
    <string name="collectionName">Альбом</string>
    <string name="releaseDate">Год</string>
    <string name="primaryGenreName">Жанр</string>
    <string name="country">Страна</string>
    <string name="timer">0:30</string>
    <string name="timer_start">00:00</string>
    <string name="favourites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_favourites">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_internet">Проверьте подключение к интернету</string>
    <string name="create">Создать</string>
    <string name="create_playlist_title">Название*</string>
    <string name="create_playlist_description">Описание</string>
    <string name="bottom_sheet_title">Добавить в плейлист</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="track_added_playlist">Добавлено в плейлист</string>
    <string name="complete">Завершить</string>
    <string name="cansel">Отмена</string>
    <string name="confirm_dialog_title">Завершить создание плейлиста?</string>
    <string name="confirm_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="delete_track_dialog_message">Хотите удалить трек?</string>
    <string name="delete_playlist_dialog_message">Хотите удалить плейлист</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="confirm_exit">Вы действительно хотите выйти из приложения?</string>


    <plurals name="tracks_count">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes_count">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>