<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/SubsequentToolbarsStyle"
        app:title="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/SwitchThemeStyle"
        android:layout_marginTop="24dp"
        android:text="@string/dark_theme" />

    <TextView
        android:id="@+id/share"
        style="@style/SettingsListTextStyle"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/support"
        style="@style/SettingsListTextStyle"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/user_agreement"
        style="@style/SettingsListTextStyle"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/ic_user_agreement" />

</LinearLayout>