<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/blue">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/primary_text_size"
            android:textColor="@color/white"
            android:layout_marginTop="14dp"
            android:layout_marginStart="16dp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="28dp"
        android:layout_marginHorizontal="16dp">


        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text_size"
            android:gravity="center"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"/>

        <Button
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/media_library"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text_size"
            android:gravity="center"
            app:icon="@drawable/ic_media_library"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"/>

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text_size"
            android:gravity="center"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"/>

    </LinearLayout>

</LinearLayout>
