<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_61"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:paddingStart="@dimen/margin_16"
            android:paddingEnd="15dp"
            android:text="@string/dark_theme"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16"
            app:thumbTint="@color/thumb_on"
            app:trackTint="@color/track_on" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_61"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_weight="1"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16"
            android:drawableEnd="@drawable/ic_share"
            android:paddingEnd="@dimen/padding_12"
            android:drawableTint="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_61"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_weight="1"
            android:text="@string/support"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16"
            android:drawableEnd="@drawable/ic_support"
            android:paddingEnd="@dimen/padding_12"
            android:drawableTint="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_61"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16"
            android:drawableEnd="@drawable/ic_user_agreement"
            android:paddingEnd="@dimen/padding_12"
            android:drawableTint="@color/white"/>
    </LinearLayout>

</LinearLayout>