<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/SubsequentToolbarsStyle"
        app:title="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/padding_8"
        android:background="@drawable/ed_style">

        <ImageView
            style="@style/IconEditTextSearchStyle"
            android:layout_marginStart="13dp"
            android:layout_marginTop="11dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_search_edit_text" />

        <EditText
            android:id="@+id/inputEditText"
            style="@style/EditTextSearchStyle"
            android:layout_marginStart="36dp"
            android:background="@null"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor" />

        <ImageView
            android:id="@+id/clearButton"
            style="@style/IconEditTextSearchStyle"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="14dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_close"
            android:visibility="gone" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_track" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/ProgressBarStyle"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_140"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/placeholderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/errorPlaceholderImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            tools:src="@drawable/placeholder_not_found" />

        <TextView
            android:id="@+id/placeholderText"
            style="@style/ErrorPlaceholderTextStyle"
            tools:text="@string/problems_with_the_internet" />

        <Button
            android:id="@+id/refreshButton"
            style="@style/ErrorPlaceholderButtonStyle"
            android:paddingStart="@dimen/padding_8"
            android:paddingTop="@dimen/padding_6"
            android:paddingEnd="@dimen/padding_6"
            android:text="@string/refresh"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/historyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/HistoryListTitle"
            android:layout_marginTop="@dimen/margin_42"
            android:text="@string/history_list_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_weight="1" />

        <Button
            android:id="@+id/clearHistoryButton"
            style="@style/ErrorPlaceholderButtonStyle"
            android:layout_marginTop="@dimen/margin_24"
            android:paddingHorizontal="@dimen/padding_14"
            android:paddingVertical="@dimen/padding_10"
            android:text="@string/clear_history_button" />
    </LinearLayout>
</LinearLayout>