<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mediaLibrary.ui.CreatePlaylistFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/btn_back"
        style="@style/SubsequentToolbarsStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back"
        app:title="@string/new_playlist" />

    <ImageView
        android:id="@+id/iv_cover"
        style="@style/ImageViewCoverStyle"
        android:layout_marginHorizontal="@dimen/margin_24"
        android:clickable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/create_playlist_cover_layer_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_text_input_layout"
        style="@style/CreatePlaylistInputLayout"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_cover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_title"
            style="@style/CreatePlaylistTextInputHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_playlist_title"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_text_input_layout"
        style="@style/CreatePlaylistInputLayout"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_description"
            style="@style/CreatePlaylistTextInputHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_playlist_description"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:scrollHorizontally="false"
            android:singleLine="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/create_playlist_button"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/text_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>