<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_61"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            android:textColor="@color/black_0"
            android:textSize="@dimen/text_16" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="6dp"
            android:paddingEnd="9dp"
            android:checked="false"
            app:thumbTint="@color/gray"
            app:trackTint="@color/track_off" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_61"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_weight="1"
            android:text="@string/share"
            android:textColor="@color/black_0"
            android:textSize="@dimen/text_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_19"
            android:layout_marginEnd="@dimen/margin_12"
            android:src="@drawable/ic_share" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_61"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_weight="1"
            android:text="@string/support"
            android:textColor="@color/black_0"
            android:textSize="@dimen/text_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_19"
            android:layout_marginEnd="@dimen/margin_12"
            android:src="@drawable/ic_support" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_61"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="@color/black_0"
            android:textSize="@dimen/text_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_19"
            android:layout_marginEnd="@dimen/margin_12"
            android:src="@drawable/ic_user_agreement" />

    </LinearLayout>

</LinearLayout>