<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.AudioPlayerFragment">

<androidx.constraintlayout.widget.ConstraintLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:id="@+id/countryTitle"
        style="@style/AudioPlayerDescriptionTitleStyle"
        android:layout_marginBottom="28dp"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftBorder2"
        app:layout_constraintTop_toBottomOf="@id/primaryGenreNameTitle" />

    <TextView
        android:id="@+id/countryName"
        style="@style/AudioPlayerDescriptionStyle"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/countryTitle"
        app:layout_constraintEnd_toEndOf="@id/rightBorder2"
        tools:text="Великобритания" />

    <TextView
        android:id="@+id/primaryGenreNameTitle"
        style="@style/AudioPlayerDescriptionTitleStyle"
        android:text="@string/primaryGenreName"
        app:layout_constraintBottom_toTopOf="@id/countryTitle"
        app:layout_constraintStart_toStartOf="@id/leftBorder2"
        app:layout_constraintTop_toBottomOf="@id/releaseDateTitle" />

    <TextView
        android:id="@+id/primaryGenreName"
        style="@style/AudioPlayerDescriptionStyle"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/primaryGenreNameTitle"
        app:layout_constraintEnd_toEndOf="@id/rightBorder2"
        tools:text="Rock" />

    <TextView
        android:id="@+id/releaseDateTitle"
        style="@style/AudioPlayerDescriptionTitleStyle"
        android:text="@string/releaseDate"
        app:layout_constraintBottom_toTopOf="@id/primaryGenreNameTitle"
        app:layout_constraintStart_toStartOf="@id/leftBorder2"
        app:layout_constraintTop_toBottomOf="@id/collectionNameTitle" />

    <TextView
        android:id="@+id/releaseDate"
        style="@style/AudioPlayerDescriptionStyle"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/releaseDateTitle"
        app:layout_constraintEnd_toEndOf="@id/rightBorder2"
        tools:text="1965" />

    <TextView
        android:id="@+id/collectionNameTitle"
        style="@style/AudioPlayerDescriptionTitleStyle"
        android:text="@string/collectionName"
        app:layout_constraintBottom_toTopOf="@id/releaseDateTitle"
        app:layout_constraintStart_toStartOf="@id/leftBorder2"
        app:layout_constraintTop_toBottomOf="@id/durationTrackTitle" />

    <TextView
        android:id="@+id/collectionName"
        style="@style/AudioPlayerDescriptionStyle"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/collectionNameTitle"
        app:layout_constraintEnd_toEndOf="@id/rightBorder2"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/durationTrackTitle"
        style="@style/AudioPlayerDescriptionTitleStyle"
        android:text="@string/durationTrack"
        app:layout_constraintBottom_toTopOf="@id/collectionNameTitle"
        app:layout_constraintStart_toStartOf="@id/leftBorder2"
        app:layout_constraintTop_toBottomOf="@id/topBorder"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/trackDuration"
        style="@style/AudioPlayerDescriptionStyle"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/durationTrackTitle"
        app:layout_constraintEnd_toEndOf="@id/rightBorder2"
        tools:text="5:35" />

    <TextView
        android:id="@+id/timer"
        style="@style/AudioPlayerTrackTitle"
        android:layout_width="wrap_content"
        android:layout_marginBottom="39dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/timer"
        android:textFontWeight="500"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/topBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />

    <ImageButton
        android:id="@+id/bt_add_to_playlist"
        android:layout_width="@dimen/dimen_51"
        android:layout_height="@dimen/dimen_51"
        android:layout_marginBottom="29dp"
        android:background="@drawable/round_button_style"
        android:src="@drawable/ic_add_to_playlists"
        app:layout_constraintBottom_toTopOf="@id/timer"
        app:layout_constraintEnd_toStartOf="@id/playButton"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_style"
        android:enabled="false"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="@id/bt_add_to_playlist"
        app:layout_constraintEnd_toStartOf="@id/bt_add_to_favourites"
        app:layout_constraintStart_toEndOf="@id/bt_add_to_playlist"
        app:layout_constraintTop_toTopOf="@id/bt_add_to_playlist" />

    <ImageButton
        android:id="@+id/bt_add_to_favourites"
        android:layout_width="@dimen/dimen_51"
        android:layout_height="@dimen/dimen_51"
        android:layout_marginTop="@dimen/margin_54"
        android:background="@drawable/round_button_style"
        android:src="@drawable/ic_not_favourites"
        app:layout_constraintBottom_toBottomOf="@id/bt_add_to_playlist"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/playButton" />

    <TextView
        android:id="@+id/artistName"
        style="@style/AudioPlayerTrackTitle"
        android:layout_marginBottom="@dimen/margin_54"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/bt_add_to_playlist"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        tools:text="The Beatles" />

    <TextView
        android:id="@+id/trackTitle"
        style="@style/AudioPlayerTrackTitle"
        android:layout_marginBottom="@dimen/margin_12"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="@dimen/primary_text_size"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/artistName"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="TrackTitleTag"
        tools:text="Yesterday (Remastered 2009)" />

    <ImageView
        style="@style/ImageViewCoverStyle"
        android:id="@+id/imageCover"
        android:layout_marginBottom="@dimen/margin_24"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_cover"
        app:layout_constraintBottom_toTopOf="@id/trackTitle"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back_button"
        style="@style/SubsequentToolbarsStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="gone">
        
        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounder"/>

        <TextView
            style="@style/BottomSheetTitle"
            android:text="@string/bottom_sheet_title"/>

        <Button
            android:id="@+id/newPlaylistButton"
            style="@style/ErrorPlaceholderButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/new_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlists_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_24"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/playlistsPlaceholderMessage"
            style="@style/ErrorPlaceholderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/empty_playlists"
            android:layout_gravity="center"
            android:visibility="gone"/>
        
    </LinearLayout>
    
</androidx.coordinatorlayout.widget.CoordinatorLayout>
